force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__InventoryRequestItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InventoryRequestItemId__c</fullName>
    <label>Inventory Request Item</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InventoryRequestItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>