force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__InventoryTransferNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__InventoryTransferNumber__c</fullName>
    <label>Inventory Transfer Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InventoryTransferNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>