force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__IsReceived__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsReceived__c</fullName>
    <label>Is Received</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsReceived</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>