force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__isSent__c.field-meta.xml
<CustomField>
    <fullName>ssot__isSent__c</fullName>
    <label>is Sent</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>isSent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>