force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__LastReferencedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastReferencedDateTime__c</fullName>
    <label>Last Referenced DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastReferencedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>