force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__rel_1710432557074_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1710432557074_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InventoryTransfer_SourceLocationId_m_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>InventoryTransfer_SourceLocationId_m_rel</relationshipLabel>
    <relationshipName>rel_1710432557074_end</relationshipName>
    <type>Lookup</type>
</CustomField>