force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__rel_1710432577205_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1710432577205_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InventoryTransfer_OwnerId_map_User_I_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>InventoryTransfer_OwnerId_map_User_I_rel</relationshipLabel>
    <relationshipName>rel_1710432577205_end</relationshipName>
    <type>Lookup</type>
</CustomField>