force-app/main/default/objects/ssot__InventoryTransfer__dlm/fields/ssot__ShipmentExpectedDlvrDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShipmentExpectedDlvrDateTime__c</fullName>
    <label>Shipment Expected Delivery DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShipmentExpectedDlvrDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>